photo gallery assignment

--- a/index.html
+++ b/index.html
@@ -35,51 +35,51 @@
 </section>
 <main>
     <figure>
-        <img src="chile.png" alt="Ocean with sunset">
+        <img src="Chile.png" alt="Ocean with sunset">
             <figcaption>Chile, 2001</figcaption>
     </figure>
     <figure>
-        <img src="guatemala.png" alt="Purple skies and sunset">
+        <img src="Guatemala.png" alt="Purple skies and sunset">
             <figcaption>Guatemala, 1997</figcaption>
     </figure>
     <figure>
-        <img src="hawaii.png" alt="Green mountains with clouds">
+        <img src="Hawaii.png" alt="Green mountains with clouds">
             <figcaption>Hawaii, 2010</figcaption>
     </figure>
     <figure>
-        <img src="iran.png" alt="Red plants, mountains and sun">
+        <img src="Iran.png" alt="Red plants, mountains and sun">
             <figcaption>Iran, 1999</figcaption>
     </figure>
     <figure>
-        <img src="ireland.png" alt="Green trees and scenery">
+        <img src="Ireland.png" alt="Green trees and scenery">
             <figcaption>Ireland, 2012</figcaption>
     </figure>
     <figure>
-        <img src="italy.png" alt="Lake with a boat, trees and mountains">
+        <img src="Italy.png" alt="Lake with a boat, trees and mountains">
             <figcaption>Italy, 2015</figcaption>
     </figure>
     <figure>
-        <img src="moab-desert.png" alt="Cave with sunset">
+        <img src="Moab-Desert.png" alt="Cave with sunset">
             <figcaption>Moab Desert, 2020</figcaption>
     </figure>
     <figure>
-        <img src="rocky-mountains.png" alt="Rocky mountains with water">
+        <img src="Rocky-Mountains.png" alt="Rocky mountains with water">
             <figcaption>Rocky Mountains, 2009</figcaption>
     </figure>
     <figure>
-        <img src="switzerland.png" alt="Snowy mountains and trees">
+        <img src="Switzerland.png" alt="Snowy mountains and trees">
             <figcaption>Switzerland, 2009</figcaption>
     </figure>
     <figure>
-        <img src="uk.png" alt="Dry green mountains">
+        <img src="UK.png" alt="Dry green mountains">
             <figcaption>UK, 2005</figcaption>
     </figure>
     <figure>
-        <img src="usa.png" alt="Red and yellow flowers with sunset">
+        <img src="USA.png" alt="Red and yellow flowers with sunset">
             <figcaption>USA, 2021</figcaption>
     </figure>
     <figure>
-        <img src="wyoming.png" alt="Trees, lake, and mountains and a reflection in the lake">
+        <img src="Wyoming.png" alt="Trees, lake, and mountains and a reflection in the lake">
             <figcaption>Wyoming, 2021</figcaption>
         </figure>
 </main>
