photo gallery assignment

--- a/index.html
+++ b/index.html
@@ -47,39 +47,39 @@
             <figcaption>Hawaii, 2010</figcaption>
     </figure>
     <figure>
-        <img src="images/Iran.png" alt="Red plants, mountains and sun">
+        <img src="Iran.png" alt="Red plants, mountains and sun">
             <figcaption>Iran, 1999</figcaption>
     </figure>
     <figure>
-        <img src="images/Ireland.png" alt="Green trees and scenery">
+        <img src="Ireland.png" alt="Green trees and scenery">
             <figcaption>Ireland, 2012</figcaption>
     </figure>
     <figure>
-        <img src="images/Italy.png" alt="Lake with a boat, trees and mountains">
+        <img src="Italy.png" alt="Lake with a boat, trees and mountains">
             <figcaption>Italy, 2015</figcaption>
     </figure>
     <figure>
-        <img src="images/Moab-Desert.png" alt="Cave with sunset">
+        <img src="Moab-Desert.png" alt="Cave with sunset">
             <figcaption>Moab Desert, 2020</figcaption>
     </figure>
     <figure>
-        <img src="images/Rocky-Mountains.png" alt="Rocky mountains with water">
+        <img src="Rocky-Mountains.png" alt="Rocky mountains with water">
             <figcaption>Rocky Mountains, 2009</figcaption>
     </figure>
     <figure>
-        <img src="images/Switzerland.png" alt="Snowy mountains and trees">
+        <img src="Switzerland.png" alt="Snowy mountains and trees">
             <figcaption>Switzerland, 2009</figcaption>
     </figure>
     <figure>
-        <img src="images/UK.png" alt="Dry green mountains">
+        <img src="UK.png" alt="Dry green mountains">
             <figcaption>UK, 2005</figcaption>
     </figure>
     <figure>
-        <img src="images/USA.png" alt="Red and yellow flowers with sunset">
+        <img src="USA.png" alt="Red and yellow flowers with sunset">
             <figcaption>USA, 2021</figcaption>
     </figure>
     <figure>
-        <img src="images/Wyoming.png" alt="Trees, lake, and mountains and a reflection in the lake">
+        <img src="Wyoming.png" alt="Trees, lake, and mountains and a reflection in the lake">
             <figcaption>Wyoming, 2021</figcaption>
         </figure>
 </main>
